<resources>
    <string name="app_name">Usuarios</string>
    <string name="hint_userName">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_firstName">Nombres</string>
    <string name="hint_lastName">Apellidos</string>
    <string name="hint_documentNumber">Número de documento</string>
    <string name="hint_birthDate">dd/mm/aaaa</string>
    <string name="hint_age">Edad</string>
    <string name="hint_height">Estatura</string>
    <string name="text_saveButton">Guardar</string>
    <string name="title_addMenu">Nuevo usuario</string>
</resources>