<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SeeUserActivity">

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_userName" />
    <EditText
        android:id="@+id/userNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/userNameTextView"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_password" />
    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/passwordTextView"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/firstNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_firstName" />
    <EditText
        android:id="@+id/firstNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/firstNameTextView"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/lastNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_lastName" />
    <EditText
        android:id="@+id/lastNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/lastNameTextView"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/documentNumberTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_documentNumber" />
    <EditText
        android:id="@+id/documentNumberText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/documentNumberText"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_age" />
    <EditText
        android:id="@+id/ageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/ageTextView"
        android:inputType="number"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_height" />
    <EditText
        android:id="@+id/heightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/heightTextView"
        android:inputType="numberDecimal"
        android:textSize="24sp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_saveButton"
        android:textSize="24sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editFloatingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteFloatingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        />

</LinearLayout>